--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -82,6 +82,7 @@
             android:tint="@color/white"
             app:backgroundTint="@color/green"
             app:layout_anchor="@id/app_bar"
-            app:layout_anchorGravity="bottom|right"/>
+            app:layout_anchorGravity="bottom|right"
+            android:visibility="invisible"/>
     </android.support.design.widget.CoordinatorLayout>
 </layout>
