--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -15,6 +15,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingLeft="@dimen/activity_margin_10"
+            android:paddingRight="@dimen/activity_margin_10"
             android:orientation="vertical">
             <RelativeLayout
                 android:id="@+id/btn_editProfile"
