--- a/app/src/main/res/menu/menu_profile.xml
+++ b/app/src/main/res/menu/menu_profile.xml
@@ -12,15 +12,8 @@
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_setting"
-        app:showAsAction="never"
+        app:showAsAction="always"
         android:visible="true"
-        android:icon="@android:drawable/ic_menu_edit"
-        />
-    <item
-        android:id="@+id/action_logout"
-        android:title="@string/action_logout"
-        app:showAsAction="never"
-        android:visible="true"
-        android:icon="@android:drawable/ic_menu_edit"
+        android:icon="@drawable/ic_settings"
         />
 </menu>
