--- a/app/src/main/res/layout/view_downloaded.xml
+++ b/app/src/main/res/layout/view_downloaded.xml
@@ -1,40 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/white"
-    style="@style/widget_cardview"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="@dimen/activity_margin_5"
+    android:elevation="@dimen/activity_margin_5"
+    android:orientation="vertical"
+    android:layout_margin="@dimen/activity_margin_3"
     android:clickable="true"
-    android:foreground="?attr/selectableItemBackground"
-    android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/activity_margin_10"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/jobID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/txtview_info_title"
-                android:layout_centerVertical="true"
-                android:text="1"/>
-            <TextView
-                android:id="@+id/jobTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/style_txtview_standard"
-                android:layout_centerVertical="true"
-                android:text="JOb Title"
-                android:layout_marginLeft="@dimen/activity_margin_3"
-                android:layout_toRightOf="@+id/jobID"/>
-        </RelativeLayout>
-
-    </LinearLayout>
-
+    android:foreground="?attr/selectableItemBackground">
+    <ImageView
+        android:id="@+id/img_download"
+        android:layout_width="@dimen/liked_pic_size"
+        android:layout_height="@dimen/liked_pic_size"
+        android:scaleType="centerCrop"/>
 </android.support.v7.widget.CardView>
