Update in Profile Pic Screen. Added pinch to zoom and menu options.

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/windowBackground"
+    android:animateLayoutChanges="true"
     android:clickable="true">
 
     <include layout="@layout/layout_toolbar" />
@@ -52,6 +53,11 @@
                         android:src="@drawable/ic_edit"
                         android:tint="@color/white"
                         app:fabSize="mini"/>
+                    <ProgressBar
+                        android:id="@+id/progress_bar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"/>
 
                 </FrameLayout>
             </FrameLayout>
