--- a/app/src/main/res/layout/fragment_profile_pic.xml
+++ b/app/src/main/res/layout/fragment_profile_pic.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
+    android:animateLayoutChanges="true"
     android:clickable="true">
-    <include layout="@layout/layout_toolbar"/>
-    <android.support.v4.widget.NestedScrollView
+
+    <include layout="@layout/layout_toolbar" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <RelativeLayout
+
+        <com.sampleboard.utils.TouchImageView
+            android:id="@+id/profile_pic"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center">
-            <ImageView
-                android:id="@+id/profile_pic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:transitionName="profile_pic"
-                android:minHeight="220dp"
-                android:scaleType="matrix"
-                android:layout_centerInParent="true"/>
-            <ProgressBar
-                android:id="@+id/progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"/>
-        </RelativeLayout>
-    </android.support.v4.widget.NestedScrollView>
+            android:scaleType="matrix"
+            android:layout_centerVertical="true"
+            android:src="@drawable/profile_img"
+            android:transitionName="profile_pic" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
