FIxed Shared Element Transitions in Profile page.

--- a/app/src/main/res/layout/view_photoslist.xml
+++ b/app/src/main/res/layout/view_photoslist.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/image"
                 android:transitionName="transition_img"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="@dimen/liked_pic_size"
                 android:scaleType="centerCrop"/>
 
         </RelativeLayout>
