--- a/app/src/main/res/layout/view_downloaded.xml
+++ b/app/src/main/res/layout/view_downloaded.xml
@@ -1,5 +1,5 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="@dimen/activity_margin_5"
@@ -10,7 +10,8 @@
     android:foreground="?attr/selectableItemBackground">
     <ImageView
         android:id="@+id/img_download"
-        android:layout_width="@dimen/liked_pic_size"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/liked_pic_size"
+        android:transitionName="detail_image"
         android:scaleType="centerCrop"/>
 </android.support.v7.widget.CardView>
