--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,13 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/appBar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/windowBackground"
     android:clickable="true">
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <android.support.v7.widget.Toolbar
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/searchbar_bg"
+            android:drawableLeft="@drawable/ic_search"
+            android:drawablePadding="@dimen/activity_margin_10"
+            android:drawableTint="@color/dark_gray"
+            android:hint="Search.."
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:maxLines="1"
+            android:padding="@dimen/activity_margin_10"
+            android:textColor="@color/app_textcolor"
+            android:textColorHint="@color/app_hintcolor" />
+        <!--<android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -21,34 +37,13 @@
         <View
             android:id="@+id/anchor_dropdown"
             android:layout_width="match_parent"
-            android:layout_height="0dp" />
+            android:layout_height="0dp" />-->
     </android.support.design.widget.AppBarLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/search_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-
-    <com.github.jorgecastilloprz.FABProgressCircle
-        android:id="@+id/fabProgressCircle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:arcColor="#00ffff"
-        app:arcWidth="3dp"
-        app:finalIcon="@drawable/ic_search"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="@dimen/activity_margin_16">
-        <!-- You can change it with the fab from the library you want to use -->
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_cloud_download"
-            app:rippleColor="@color/colorAccent"
-            app:elevation="@dimen/activity_margin_5"
-            app:borderWidth="0dp"
-            />
-    </com.github.jorgecastilloprz.FABProgressCircle>
 </android.support.design.widget.CoordinatorLayout>
