--- a/app/src/main/res/menu/menu_profile.xml
+++ b/app/src/main/res/menu/menu_profile.xml
@@ -2,12 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_search"
-        android:title="@string/action_search"
-        android:icon="@drawable/ic_search"
-        app:actionLayout="@layout/search_view_layout"
-        app:showAsAction="ifRoom|collapseActionView"
-        android:visible="true"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
-
+        android:id="@+id/action_settings"
+        android:title="@string/action_setting"
+        android:icon="@drawable/ic_settings"
+        app:showAsAction="always"
+        android:visible="true"/>
 </menu>
