--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -17,7 +17,7 @@
         android:layout_gravity="start"
         android:layout_alignParentBottom="true"
         app:itemBackground="@color/colorPrimary"
-        app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"
+        app:itemIconTint="@color/color_icon"
+        app:itemTextColor="@color/color_icon"
         app:menu="@menu/menu_dashboard" />
 </RelativeLayout>
