--- a/app/src/main/res/layout/fragment_category_sheet.xml
+++ b/app/src/main/res/layout/fragment_category_sheet.xml
@@ -1,11 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/windowBackground"
     android:clickable="true"
+    android:padding="@dimen/activity_margin_10"
+    android:foreground="?attr/selectableItemBackground"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/search_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/searchbar_bg"
+                android:drawableLeft="@drawable/ic_search"
+                android:drawablePadding="@dimen/activity_margin_10"
+                android:drawableTint="@color/colorPrimary"
+                android:hint="Search Category"
+                android:textColor="@color/app_textcolor"
+                android:textColorHint="@color/app_hintcolor"
+                android:textSize="@dimen/text_size" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/category_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="100dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/txtview_info_title"
+                android:text="Trending Category"
+                android:layout_marginTop="@dimen/activity_margin_5"
+                android:layout_marginBottom="@dimen/activity_margin_5"
+                android:padding="@dimen/activity_margin_5"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/trending_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="100dp"
+                ></android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
