--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -49,9 +49,9 @@
                     android:id="@+id/post_detail_img"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="300dp"
                     android:scaleType="centerCrop"
-                    android:transitionName="detail_image"
-                    android:minHeight="300dp" />
+                    android:transitionName="detail_image" />
 
                 <ProgressBar
                     android:id="@+id/progress_bar"
@@ -117,26 +117,61 @@
                     android:layout_marginRight="@dimen/activity_margin_5"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_comment"
-                        />
+                        android:src="@drawable/ic_comment" />
+
                     <TextView
                         android:id="@+id/comment_count"
+                        style="@style/txtview_small_widget"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/activity_margin_5"
-                        style="@style/txtview_small_widget"
-                        android:text="3,256"
-                        android:maxLines="1"/>
+                        android:maxLines="1"
+                        android:text="3,256" />
                 </LinearLayout>
 
             </RelativeLayout>
+
+            <android.support.v7.widget.CardView
+                style="@style/widget_cardview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="@dimen/activity_margin_5"
+                app:cardElevation="@dimen/activity_margin_5"
+                app:cardPreventCornerOverlap="false"
+                app:cardUseCompatPadding="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        style="@style/txtview_standard_widget"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Tags"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/tags"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/txtview_small_widget"
+                        />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/related_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
