--- a/app/src/main/res/layout/view_photoslist.xml
+++ b/app/src/main/res/layout/view_photoslist.xml
@@ -18,7 +18,7 @@
             android:layout_height="230dp">
             <ImageView
                 android:id="@+id/image"
-                android:transitionName="transition_img"
+                android:transitionName="detail_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"/>
@@ -28,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
+            android:visibility="gone"
             android:background="@android:color/white">
             <TextView
                 android:id="@+id/title"
