--- a/app/src/main/res/menu/menu_dashboard.xml
+++ b/app/src/main/res/menu/menu_dashboard.xml
@@ -16,6 +16,13 @@
         android:icon="@drawable/ic_search"
         />
     <item
+        android:id="@+id/action_camera"
+        android:title="@string/action_camera"
+        app:showAsAction="ifRoom"
+        android:visible="true"
+        android:icon="@drawable/ic_camera"
+        />
+    <item
         android:id="@+id/action_feed"
         android:title="@string/action_feed"
         app:showAsAction="ifRoom"
@@ -29,11 +36,5 @@
         android:visible="true"
         android:icon="@drawable/ic_profile"
         />
-    <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_profile"
-        app:showAsAction="ifRoom"
-        android:visible="true"
-        android:icon="@drawable/ic_settings"
-        />
+
 </menu>
