--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#732d5f</color>
+    <color name="colorPrimary">#fffb32</color>
     <color name="colorPrimaryDark">#581f56</color>
     <color name="colorAccent">#cf407a</color>
+
+    <color name="color_icon">#329fff</color>
 
     <color name="windowBackground">#edeaea</color>
     <color name="splash_bg">#21271F</color>
     <color name="app_textcolor_heading">#444444</color>
-    <color name="app_textcolor">#2c0e25</color>
+    <color name="app_textcolor">#329fff</color>
     <color name="app_hintcolor">#3e3e3e</color>
     <color name="light_transpirant_black">#79666565</color>
     <color name="transpirant_red">#79d73f3f</color>
