--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:clickable="true"
     android:orientation="vertical">
 
     <include layout="@layout/layout_toolbar" />
@@ -10,6 +12,7 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
@@ -17,13 +20,48 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/activity_margin_5"
+                android:background="@color/white"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="5dp"
+                app:cardPreventCornerOverlap="false"
+                app:cardUseCompatPadding="true">
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/post_detail_img"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:minHeight="300dp"
+                        android:scaleType="centerCrop"
+                        android:transitionName="detail_image" />
+
+                    <ProgressBar
+                        android:id="@+id/progress_bar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center" />
+                </FrameLayout>
+            </android.support.v7.widget.CardView>
+
+            <LinearLayout
+                android:id="@+id/view_owner_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:layout_margin="@dimen/activity_margin_3"
+                android:foreground="?attr/selectableItemBackground"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:padding="@dimen/activity_margin_5">
-
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/owner_img"
                     android:layout_width="@dimen/profile_pic_size_small"
@@ -40,25 +78,6 @@
                     android:text="Anuj Sharma"
                     android:textColor="@color/app_textcolor" />
             </LinearLayout>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/post_detail_img"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="300dp"
-                    android:scaleType="centerCrop"
-                    android:transitionName="detail_image" />
-
-                <ProgressBar
-                    android:id="@+id/progress_bar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center" />
-            </FrameLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -135,37 +154,55 @@
 
             </RelativeLayout>
 
-            <android.support.v7.widget.CardView
-                style="@style/widget_cardview"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="@dimen/activity_margin_5"
-                app:cardElevation="@dimen/activity_margin_5"
-                app:cardPreventCornerOverlap="false"
-                app:cardUseCompatPadding="true">
+                android:layout_marginTop="@dimen/activity_margin_5"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/activity_margin_10"
+                android:paddingRight="@dimen/activity_margin_10">
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/tags"
+                    style="@style/txtview_small_widget"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        style="@style/txtview_standard_widget"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Tags"
-                        android:textStyle="bold" />
-                    <TextView
-                        android:id="@+id/tags"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        style="@style/txtview_small_widget"
-                        />
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
+                    android:layout_marginTop="@dimen/activity_margin_3" />
 
+                <TextView
+                    android:id="@+id/description"
+                    style="@style/txtview_small_widget"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_margin_3" />
+
+                <TextView
+                    android:id="@+id/readmore"
+                    style="@style/txtview_small_widget"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_margin_3"
+                    android:gravity="center"
+                    android:padding="@dimen/activity_margin_5"
+                    android:text="@string/show_more"
+                    android:textColor="@color/color_icon" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_marginTop="@dimen/activity_margin_10"
+                    android:background="@color/dark_gray" />
+
+                <TextView
+                    style="@style/txtview_info_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_margin_3"
+                    android:gravity="left"
+                    android:padding="@dimen/activity_margin_5"
+                    android:text="Related Posts" />
+            </LinearLayout>
 
 
             <android.support.v7.widget.RecyclerView
