--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/windowBackground"
-    android:clickable="true">
+    android:clickable="true"
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -15,47 +16,62 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:elevation="@dimen/activity_margin_5"
             app:contentScrim="@color/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            android:elevation="@dimen/activity_margin_5"
             app:expandedTitleTextAppearance="@android:color/transparent"
             app:layout_scrollFlags="scroll|enterAlways"
             app:statusBarScrim="@color/white">
 
             <RelativeLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="?attr/actionBarSize"
                 android:padding="@dimen/activity_margin_16"
                 app:layout_collapseMode="none"
                 app:layout_scrollFlags="snap">
+
                 <RelativeLayout
                     android:id="@+id/view_profile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/profile_image"
+                        android:layout_width="96dp"
+                        android:layout_height="96dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/profile_img" />
 
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_toLeftOf="@+id/profile_image"
-                    android:padding="@dimen/activity_margin_5"
-                    android:text="Anuj Sharma"
-                    android:textColor="@color/color_icon"
-                    android:textSize="@dimen/activity_margin_32"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_toRightOf="@+id/profile_image"
+                        android:padding="@dimen/activity_margin_5"
+                        android:text="Anuj Sharma"
+                        android:textColor="@color/color_icon"
+                        android:textSize="@dimen/activity_margin_32"
+                        android:textStyle="bold" />
 
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/profile_image"
-                    android:layout_width="96dp"
-                    android:layout_height="96dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/profile_img" />
+                    <TextView
+                        android:id="@+id/bio"
+                        style="@style/txtview_small_widget"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/name"
+                        android:layout_marginLeft="@dimen/activity_margin_10"
+                        android:layout_toRightOf="@+id/profile_image"
+                        android:maxLines="2"
+                        android:text="small description"
+                        android:textColor="@color/color_icon" />
                 </RelativeLayout>
+
+
                 <LinearLayout
                     android:id="@+id/view_fork"
                     android:layout_width="match_parent"
@@ -169,6 +185,61 @@
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/view_fork"
+                    android:layout_marginTop="@dimen/activity_margin_5"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/btn_fork"
+                        style="@style/txtview_standard_widget"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/btn_shape"
+                        android:clickable="true"
+                        android:elevation="@dimen/activity_margin_3"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:paddingBottom="@dimen/activity_margin_5"
+                        android:paddingLeft="@dimen/activity_margin_10"
+                        android:paddingRight="@dimen/activity_margin_10"
+                        android:paddingTop="@dimen/activity_margin_5"
+                        android:text="@string/fork"
+                        android:textColor="@color/white" />
+
+                    <TextView
+                        android:id="@+id/btn_message"
+                        style="@style/txtview_standard_widget"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginLeft="@dimen/activity_margin_10"
+                        android:background="@drawable/btn_shape"
+                        android:clickable="true"
+                        android:elevation="@dimen/activity_margin_3"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:paddingBottom="@dimen/activity_margin_5"
+                        android:paddingLeft="@dimen/activity_margin_10"
+                        android:paddingRight="@dimen/activity_margin_10"
+                        android:paddingTop="@dimen/activity_margin_5"
+                        android:text="@string/message"
+                        android:textColor="@color/white" />
+
+                    <ImageView
+                        android:id="@+id/btn_moreoption"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_margin_10"
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:src="@drawable/ic_more_option"
+                        android:tint="@color/color_icon" />
+                </LinearLayout>
+
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
@@ -177,29 +248,14 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/colorPrimary"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/white"
-            app:tabGravity="fill"
-            app:tabIndicatorColor="@color/colorPrimaryDark"
-            app:tabIndicatorHeight="@dimen/activity_margin_3"
-            app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/red"
-            app:tabTextColor="@color/app_textcolor_heading" />
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/myposts_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:elevation="@dimen/activity_margin_5"
+        android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
 </android.support.design.widget.CoordinatorLayout>
