--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="windowBackground">#edeaea</color>
     <color name="splash_bg">#21271F</color>
     <color name="app_textcolor_heading">#444444</color>
-    <color name="app_textcolor">#329fff</color>
+    <color name="app_textcolor">#110F10</color>
     <color name="app_hintcolor">#3e3e3e</color>
     <color name="light_transpirant_black">#79666565</color>
     <color name="transpirant_red">#79d73f3f</color>
