--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:clickable="true"
     android:orientation="vertical">
 
     <include layout="@layout/layout_toolbar" />
@@ -18,6 +18,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:focusableInTouchMode="true"
             android:orientation="vertical">
 
             <android.support.v7.widget.CardView
@@ -42,13 +43,23 @@
                         android:layout_height="wrap_content"
                         android:minHeight="300dp"
                         android:scaleType="centerCrop"
-                        android:transitionName="detail_image" />
+                        android:transitionName="detail_image"
+                        tools:targetApi="lollipop" />
 
                     <ProgressBar
                         android:id="@+id/progress_bar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center" />
+
+                    <ImageView
+                        android:id="@+id/btn_download"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_cloud_download"
+                        android:tint="@color/colorPrimary"
+                        android:layout_margin="@dimen/margin_12"
+                        android:layout_gravity="right|end|bottom"/>
                 </FrameLayout>
             </android.support.v7.widget.CardView>
 
@@ -208,7 +219,8 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/related_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                />
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
