--- a/app/src/main/res/layout/fragment_download.xml
+++ b/app/src/main/res/layout/fragment_download.xml
@@ -10,6 +10,10 @@
         android:orientation="vertical" />
     <include
         android:id="@+id/included_emptyview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         layout="@layout/layout_empty_list"
         android:visibility="invisible"/>
 </RelativeLayout>
