--- a/app/src/main/res/layout/fragment_liked.xml
+++ b/app/src/main/res/layout/fragment_liked.xml
@@ -14,6 +14,10 @@
         android:layout_marginRight="@dimen/activity_margin_10"/>
 
     <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:id="@+id/included_emptyview"
         layout="@layout/layout_empty_list"
         android:visibility="invisible"/>
