--- a/app/src/main/res/layout/layout_empty_list.xml
+++ b/app/src/main/res/layout/layout_empty_list.xml
@@ -3,13 +3,13 @@
     android:id="@+id/parent_empty_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/windowBackground"
+    android:background="@color/transparent"
     android:orientation="vertical">
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_noitem"
+        android:src="@drawable/ic_no_media"
         android:layout_centerInParent="true"
         />
     <TextView
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         style="@style/txtview_info_title"
         android:layout_marginTop="@dimen/activity_margin_16"
-        android:text="No Items yet :("
+        android:text="@string/no_items_yet"
+        android:textColor="@color/dark_gray"
         android:layout_below="@+id/icon"
         android:layout_centerHorizontal="true"/>
 </RelativeLayout>
