--- a/app/src/main/res/layout/view_downloaded.xml
+++ b/app/src/main/res/layout/view_downloaded.xml
@@ -1,4 +1,5 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,11 +8,13 @@
     android:orientation="vertical"
     android:layout_margin="@dimen/activity_margin_3"
     android:clickable="true"
-    android:foreground="?attr/selectableItemBackground">
+    android:foreground="?attr/selectableItemBackground"
+    android:focusable="true"
+    tools:ignore="UnusedAttribute">
     <ImageView
         android:id="@+id/img_download"
         android:layout_width="match_parent"
         android:layout_height="@dimen/liked_pic_size"
-        android:transitionName="detail_image"
+        android:transitionName="@string/transition_image"
         android:scaleType="centerCrop"/>
 </android.support.v7.widget.CardView>
