--- a/app/src/main/res/layout/view_liked.xml
+++ b/app/src/main/res/layout/view_liked.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="@dimen/activity_margin_5"
-    android:elevation="@dimen/activity_margin_5"
-    android:orientation="vertical"
     android:layout_margin="@dimen/activity_margin_3"
     android:clickable="true"
-    android:foreground="?attr/selectableItemBackground">
+    android:elevation="@dimen/activity_margin_5"
+    android:foreground="?attr/selectableItemBackground"
+    android:orientation="vertical"
+    app:cardCornerRadius="@dimen/activity_margin_5"
+    android:focusable="true">
+
     <ImageView
         android:id="@+id/img_like"
         android:layout_width="match_parent"
         android:layout_height="@dimen/liked_pic_size"
-        android:transitionName="detail_image"
-        android:scaleType="centerCrop"/>
+        android:contentDescription="@string/app_name"
+        android:scaleType="centerCrop"
+        android:transitionName="@string/transition_image" />
 </android.support.v7.widget.CardView>
