--- a/app/src/main/res/layout/view_list.xml
+++ b/app/src/main/res/layout/view_list.xml
@@ -21,11 +21,13 @@
             android:layout_height="wrap_content">
             <ImageView
                 android:id="@+id/image"
-                android:transitionName="detail_image"
+                android:transitionName="@string/transition_image"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/app_name"
                 android:minHeight="200dp"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                tools:ignore="UnusedAttribute" />
         </RelativeLayout>
         <RelativeLayout
             android:id="@+id/info_container"
@@ -38,7 +40,9 @@
                 android:id="@+id/title"
                 style="@style/txtview_standard_widget"
                 android:layout_alignParentTop="true"
-                android:text="Title"
+                android:text=""
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
                 android:padding="@dimen/activity_margin_3"/>
@@ -46,34 +50,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/title">
-                <TextView
-                    android:id="@+id/price"
+                <ImageView
+                    android:id="@+id/img_re_share"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/txtview_small_widget"
                     android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:contentDescription="@string/app_name"
                     android:layout_centerVertical="true"
-                    android:text="Rs 6000"
-                    android:textColor="@color/app_textcolor"
+                    android:src="@drawable/ic_reshare"
+                    android:tint="@color/green"
                     android:padding="5dp"/>
                 <LinearLayout
                     android:id="@+id/likes_container"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/activity_margin_10"
+                    android:layout_marginRight="@dimen/margin_8"
+                    android:layout_marginEnd="@dimen/margin_8"
                     android:gravity="center_vertical"
                     android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:orientation="horizontal">
                     <LinearLayout
                         android:id="@+id/like_area"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true">
+                        android:layout_height="wrap_content">
                         <ImageView
                             android:id="@+id/ic_heart_initial"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
+                            android:contentDescription="@string/app_name"
                             android:background="@drawable/ic_heart_1"
                             android:scaleType="fitXY"
                             />
@@ -81,6 +87,7 @@
                             android:id="@+id/ic_heart_final"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
+                            android:contentDescription="@string/app_name"
                             android:background="@drawable/ic_heart_29"
                             android:scaleType="fitXY"
                             android:visibility="gone" />
@@ -92,14 +99,10 @@
                         style="@style/txtview_small_widget"
                         android:maxLines="1"
                         android:ellipsize="end"
-                        android:layout_centerVertical="true"
-                        android:layout_toRightOf="@+id/like_area"
-                        android:text="123"
+                        android:text="125"
                         android:textColor="@color/app_textcolor_heading" />
                 </LinearLayout>
             </RelativeLayout>
-
-
         </RelativeLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
